--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </div>
 
             <div class="home-image reveal">
-                <img src="assets/profile.jpg" alt="Manooj Kumar T A" class="profile-img" />
+                <img src="./profile.jpg" alt="Manooj Kumar T A" class="profile-img" />
             </div>
         </div>
     </section>
@@ -221,3 +221,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
