--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </div>
 
                 <div class="home-social">
-                    <a href="https://www.linkedin.com/in/manooj-kumar-t-a" target="_blank">
+                    <a href="https://www.linkedin.com/in/manooj-kumar-t-a-0771b224b/" target="_blank">
                         <i class="uil uil-linkedin"></i>
                     </a>
                     <a href="https://github.com/ManooJ-Kumar1100" target="_blank">
@@ -199,7 +199,7 @@
         <p class="reveal"><i class="uil uil-map-marker"></i> Madurai, Tamil Nadu, India</p>
 
         <div class="social-links reveal">
-            <a href="https://www.linkedin.com/in/manooj-kumar-t-a" target="_blank">
+            <a href="https://www.linkedin.com/in/manooj-kumar-t-a-0771b224b/" target="_blank">
                 <i class="uil uil-linkedin"></i>
             </a>
             <a href="https://github.com/ManooJ-Kumar1100" target="_blank">
@@ -221,4 +221,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
